--- a/feature.html
+++ b/feature.html
@@ -65,31 +65,47 @@
     <section id="features" class="features-overview">
         <div class="container">
             <h2 class="section-title">Key Features</h2>
-            <div class="features-grid">
-                <a href="feature_areatakeoff.html" class="feature-card glass-card">
-                    <h3>AreaTakeOff</h3>
-                    <p>Dynamic Area Takeoff Summary In Rhino Viewport</p>
-                </a>
-                <a href="feature_contentmerger.html" class="feature-card glass-card">
-                    <h3>ContentMerger</h3>
-                    <p>Merge Layers & Materials Effortlessly, Even In Block Definitions</p>
-                </a>
-                <a href="feature_blockusagepreview.html" class="feature-card glass-card">
-                    <h3>PreviewBlockUsage</h3>
-                    <p>Live Preview Block Usage In Model With Filter</p>
-                </a>
-                <a href="feature_randomselect.html" class="feature-card glass-card">
-                    <h3>RandomSelect</h3>
-                    <p>Random Object Selection Assistant</p>
-                </a>
-                <a href="feature_objmanager.html" class="feature-card glass-card">
-                    <h3>ObjManager</h3>
-                    <p>Batch Object Transformation With Random Rotation & Scale</p>
-                </a>
-                <a href="feature_layercolorrandomizer.html" class="feature-card glass-card">
-                    <h3>LayerColorRandomizer</h3>
-                    <p>Randomize Layer Colors Instantly</p>
-                </a>
+            <!-- Design Assist -->
+            <div class="feature-segment">
+                <h3 class="feature-segment-title">Design Assist</h3>
+                <div class="features-grid">
+                    <a href="feature_areatakeoff.html" class="feature-card glass-card">
+                        <h3>AreaTakeOff</h3>
+                        <p>Dynamic Area Takeoff Summary In Rhino Viewport</p>
+                    </a>
+                    <a href="feature_blockusagepreview.html" class="feature-card glass-card">
+                        <h3>PreviewBlockUsage</h3>
+                        <p>Live Preview Block Usage In Model With Filter</p>
+                    </a>
+                </div>
+            </div>
+            <!-- Model Cleanup -->
+            <div class="feature-segment">
+                <h3 class="feature-segment-title">Model Cleanup</h3>
+                <div class="features-grid">
+                    <a href="feature_contentmerger.html" class="feature-card glass-card">
+                        <h3>ContentMerger</h3>
+                        <p>Merge Layers & Materials Effortlessly, Even In Block Definitions</p>
+                    </a>
+                    <a href="feature_layercolorrandomizer.html" class="feature-card glass-card">
+                        <h3>LayerColorRandomizer</h3>
+                        <p>Randomize Layer Colors Instantly</p>
+                    </a>
+                </div>
+            </div>
+            <!-- Rendering Preparation -->
+            <div class="feature-segment">
+                <h3 class="feature-segment-title">Rendering Preparation</h3>
+                <div class="features-grid">
+                    <a href="feature_objtransformationmanager.html" class="feature-card glass-card">
+                        <h3>ObjTransformationManager</h3>
+                        <p>Batch Object Transformation With Random Rotation & Scale</p>
+                    </a>
+                    <a href="feature_randomselect.html" class="feature-card glass-card">
+                        <h3>RandomSelect</h3>
+                        <p>Random Object Selection Assistant</p>
+                    </a>
+                </div>
             </div>
         </div>
     </section>
