--- a/feature_blockusagepreview.html
+++ b/feature_blockusagepreview.html
@@ -79,7 +79,7 @@
     <!-- Hero Section for Feature -->
     <section class="hero" style="min-height: 50vh;">
         <div class="hero-container" style="grid-template-columns: 1fr;">
-            <div class="hero-content" style="text-align: center;">
+            <div class="hero-content" style="text-align: left;">
                 <h1 class="hero-title">PreviewBlockUsage</h1>
                 <p class="hero-description">Preview block usage in model by looking up the block definitions and their usage count. You can also limit scheduling by using a keyword. You can use the color coded block definition preview to detect usgae that might be hard to see in the model by appearance only.</p>
                 <p class="gallery-description">Command: <strong>LakeHousePreviewBlockUsage</strong></p>
