--- a/feature_contentmerger.html
+++ b/feature_contentmerger.html
@@ -79,7 +79,7 @@
     <!-- Hero Section for Feature -->
     <section class="hero" style="min-height: 50vh;">
         <div class="hero-container" style="grid-template-columns: 1fr;">
-            <div class="hero-content" style="text-align: center;">
+            <div class="hero-content" style="text-align: left;">
                 <h1 class="hero-title">ContentMerger</h1>
                 <p class="hero-description">Merge layers and materials effortlessly, great for model cleanup, especially for models where you have block definitions that prevent layers from being deleted or selected, or models where you have previously imported content and have introduced material variation of the same design intent.</p>
                 <p class="gallery-description">Command: <strong>LakeHouseContentMerger</strong></p>
