--- a/feature_objtransformationmanager.html
+++ b/feature_objtransformationmanager.html
@@ -79,7 +79,7 @@
     <!-- Hero Section for Feature -->
     <section class="hero" style="min-height: 50vh;">
         <div class="hero-container" style="grid-template-columns: 1fr;">
-            <div class="hero-content" style="text-align: center;">
+            <div class="hero-content" style="text-align: left;">
                 <h1 class="hero-title">ObjTransformationManager</h1>
                 <p class="hero-description">Batch object transformation to apply random or fixed rotation to picked objects, as well as apply a random vertical scale to the picked objects. This is useful for creating random variation of a model such as entourage modification to achieve a less repetitive look.</p>
                 <p class="gallery-description">Command: <strong>LakeHouseObjTransformationManager</strong></p>
