--- a/feature_randomselect.html
+++ b/feature_randomselect.html
@@ -79,7 +79,7 @@
     <!-- Hero Section for Feature -->
     <section class="hero" style="min-height: 50vh;">
         <div class="hero-container" style="grid-template-columns: 1fr;">
-            <div class="hero-content" style="text-align: center;">
+            <div class="hero-content" style="text-align: left;">
                 <h1 class="hero-title">RandomSelect</h1>
                 <p class="hero-description">Randomly reduce selection by desired percentage or break them into groups. Great for introducing variation for rendering purposes.</p>
                 <p class="gallery-description">Command: <strong>LakeHouseRandomSelect</strong></p>
