--- a/feature_areatakeoff.html
+++ b/feature_areatakeoff.html
@@ -79,7 +79,7 @@
     <!-- Hero Section for Feature -->
     <section class="hero" style="min-height: 50vh;">
         <div class="hero-container" style="grid-template-columns: 1fr;">
-            <div class="hero-content" style="text-align: center;">
+            <div class="hero-content" style="text-align: left;">
                 <h1 class="hero-title">AreaTakeOff</h1>
                 <p class="hero-description">Live area takeoff in Rhino viewport by looking up the bottom surface of the objects that pass the layer keyword filter. The calculation shape is visualized in the viewport via display conduit, and area summary is dynamically calculated on the fly. Great for massing study with specific area target in mind.</p>
                 <p class="gallery-description">Command: <strong>LakeHouseAreaTakeOff</strong></p>
