--- a/feature_layercolorrandomizer.html
+++ b/feature_layercolorrandomizer.html
@@ -79,7 +79,7 @@
     <!-- Hero Section for Feature -->
     <section class="hero" style="min-height: 50vh;">
         <div class="hero-container" style="grid-template-columns: 1fr;">
-            <div class="hero-content" style="text-align: center;">
+            <div class="hero-content" style="text-align: left;">
                 <h1 class="hero-title">LayerColorRandomizer</h1>
                 <p class="hero-description">Randomize layer colors to allow quick visualization of the layers using different colors rather than default black or white.</p>
                 <p class="gallery-description">Command: <strong>LakeHouseLayerColorRandomizer</strong></p>
